--- a/upsell/index.html
+++ b/upsell/index.html
@@ -2,6 +2,16 @@
 <html lang="pt-br">
   <head>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-236872965-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-236872965-1');
+    </script>
+    
     <link rel="preload" href="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62e1fd9d919107000f3a5ef2/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
     <link rel="preload" href="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62e1fd9d919107000f3a5ef2/thumbnail.jpg" as="image">
