--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       gtag('config', 'UA-236872965-1');
     </script>
 
-    <link rel="preload" href="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62fb015f95b485000a7eb77d/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62ecf23abbde30000a7cff1a/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62fb015f95b485000a7eb77d/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/62fb00f6698a92000a0c7b52/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62ecf23abbde30000a7cff1a/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/62ecf1baaf304f0009d75fe2/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -97,14 +97,14 @@
             <br>
 
             <!-- VSL -->
-            <div id="vid_62fb015f95b485000a7eb77d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62fb015f95b485000a7eb77d" src="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62fb015f95b485000a7eb77d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62fb015f95b485000a7eb77d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62fb015f95b485000a7eb77d">var s=document.createElement("script");s.src="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62fb015f95b485000a7eb77d/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_62ecf23abbde30000a7cff1a" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62ecf23abbde30000a7cff1a" src="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62ecf23abbde30000a7cff1a/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62ecf23abbde30000a7cff1a" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62ecf23abbde30000a7cff1a">var s=document.createElement("script");s.src="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/62ecf23abbde30000a7cff1a/player.js",s.async=!0,document.head.appendChild(s);</script>
             
             <style>.esconder { display: none }</style>
 
             <script type="text/javascript">
             document.addEventListener("DOMContentLoaded", function() {
             /* ALTERE O VALOR 10 PARA OS SEGUNDOS EM QUE AS SEÇÕES VÃO APARECER */
-            var SECONDS_TO_DISPLAY = 955;
+            var SECONDS_TO_DISPLAY = 965;
             var CLASS_TO_DISPLAY = ".esconder";
 
             /* DAQUI PARA BAIXO NAO PRECISA ALTERAR */
@@ -159,19 +159,19 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="esconder" style="font-family: montserrat">
-              <a href="https://pay.kiwify.com.br/OVlur6X" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/zcz4sgm" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
                 <span class="span-btn">SIM, QUERO AJUDAR MEU FILHO</span>
                 <span class="span-btn2">(Atenção: Últimas vagas disponíveis)</span>
               </a>
-              <br><a href="https://pay.kiwify.com.br/OVlur6X"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <br><a href="https://pay.kiwify.com.br/zcz4sgm"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="img-fluid" src="./assets/img/secure.webp" style="width:50%">
-              <br><br><br><b><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"><u>NESTA OCASIÃO ESPECIAL PARA AS 22 VAGAS RESTANTES:</u><br><br></b><span style="font-family:montserrat;font-size: 24px;color: #f5e051"><b>DESCONTO DE 90% DISPONÍVEL SÓ HOJE<brb></span>
+              <br><br><br><b><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"><u>NESTA OCASIÃO ESPECIAL PARA AS 22 VAGAS RESTANTES:</u><br><br></b><span style="font-family:montserrat;font-size: 24px;color: #f5e051"><b>DESCONTO DE 80% SÓ HOJE<brb></span>
                 <br><b><br>-------------------------------</b><br><br><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"> NORMALMENTE AVALIADO EM: <span style="color: #FF0000"><s>R$997 REAIS</span></s>
                 <br><b><span style="color: #11B613;">POR APENAS:<br></b></span>
-                <span style="color: #11B613;font-size: 30px;"><b>R$97 REAIS</span></b></b>
+                <span style="color: #11B613;font-size: 30px;"><b>R$197 REAIS</span></b></b>
                 <br>
                 <br>
-                <a href="https://pay.kiwify.com.br/OVlur6X"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+                <a href="https://pay.kiwify.com.br/zcz4sgm"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
                 <img class="mx-auto" height="40px" src="./assets/img/Captura.png">
             </div>
 
