--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     fbq('init', '317572060590797');
     fbq('init', '5430196173709435');
     fbq('init', '1568632086872367');
+    fbq('init', '479600177212105');
+    fbq('init', '2244734595692011');
     fbq('track', 'PageView');
     fbq('track', 'ViewContent');
     </script>
