--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       header {
         color: white;
         /*background-image: url("assets/img/bg.jpeg");*/
-        background-color: #0e244b;
+        background-color: #000000;
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
         background-blend-mode: darken;
       }
       .banner{
-        background-color: #FF008C;
+        background-color: #FF0000;
       }
 
     </style>
@@ -95,7 +95,7 @@
           <div class="col-lg-8 text-center">
 
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/branca.png" style="margin-top:-5px">
+            <img class="img-fluid" src="./assets/img/vermelho.webp" style="margin-top:-5px">
             <br>
             <br>
 
