--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Que bençao esse vídeo. Eu vivo a mesma situaçao e o pior que minha filha de 3 anos esta viciada e quero tirar mas meu esposo nao coopera, eu tiro o celular e ele vai la e dar o celular a ela 3. Que bençao esse vídeo. Eu vivo a mesma situaçao e o pior que minha filha de 3 anos esta viciada e quero tirar mas meu esposo nao coopera, eu tiro o celular e ele vai la e dar o celular a ela </td>
+                      <td class="fb-comments-comment-text">Que bençao esse vídeo. Eu vivo a mesma situaçao e o pior que minha filha de 3 anos esta viciada e quero tirar mas meu esposo nao coopera, eu tiro o celular e ele vai la e dar o celular a ela </td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
