--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     fbq('init', '2244734595692011');
     fbq('init', '518644646389229');
     fbq('init', '511936050512534');
+    fbq('init', '1262452604545141');  
     fbq('track', 'PageView');
     fbq('track', 'ViewContent');
     </script>
