--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       header {
         color: white;
         /*background-image: url("assets/img/bg.jpeg");*/
-        background-color: #000000;
+        background-color: #F8DDE0;
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
@@ -96,7 +96,7 @@
           <div class="col-lg-8 text-center">
 
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/vermelho.webp" style="margin-top:-5px">
+            <img class="img-fluid" src="./assets/img/novahead.webp" style="margin-top:-5px">
             <br>
             <br>
 
