--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             });
             </script>
 
-            <div class="quadro" style="margin-top: 10px;color: #f5e051;">
+            <div class="quadro" style="margin-top: 10px;color: #0000CD;">
               <b>👁 <span id="number"></span> PESSOAS ESTÃO ASSISTINDO A ESSE VÍDEO AGORA...</b>
 
                 <script>
