--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       gtag('config', 'UA-236872965-1');
     </script>
 
-    <link rel="preload" href="https://scripts.converteai.net/518c7069-01b2-4ef8-b469-5985f3d426e9/players/63606ea440e2a9000cfedbeb/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/518c7069-01b2-4ef8-b469-5985f3d426e9/players/63606ea440e2a9000cfedbeb/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/518c7069-01b2-4ef8-b469-5985f3d426e9/63606e9540e2a9000cfedbea/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/636715dff28d2a000abd421d/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -101,14 +101,14 @@
             <br>
 
             <!-- VSL -->
-            <div id="vid_63606ea440e2a9000cfedbeb" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63606ea440e2a9000cfedbeb" src="https://images.converteai.net/518c7069-01b2-4ef8-b469-5985f3d426e9/players/63606ea440e2a9000cfedbeb/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63606ea440e2a9000cfedbeb" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63606ea440e2a9000cfedbeb">var s=document.createElement("script");s.src="https://scripts.converteai.net/518c7069-01b2-4ef8-b469-5985f3d426e9/players/63606ea440e2a9000cfedbeb/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_636715f7f28d2a000abd421e" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_636715f7f28d2a000abd421e" src="https://images.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_636715f7f28d2a000abd421e" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_636715f7f28d2a000abd421e">var s=document.createElement("script");s.src="https://scripts.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/player.js",s.async=!0,document.head.appendChild(s);</script>
             
             <style>.esconder { display: none }</style>
 
             <script type="text/javascript">
             document.addEventListener("DOMContentLoaded", function() {
             /* ALTERE O VALOR 10 PARA OS SEGUNDOS EM QUE AS SEÇÕES VÃO APARECER */
-            var SECONDS_TO_DISPLAY = 965;
+            var SECONDS_TO_DISPLAY = 1185;
             var CLASS_TO_DISPLAY = ".esconder";
 
             /* DAQUI PARA BAIXO NAO PRECISA ALTERAR */
@@ -163,19 +163,19 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="esconder" style="font-family: montserrat">
-              <a href="https://pay.kiwify.com.br/zcz4sgm?hideBoleto=true" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
                 <span class="span-btn">SIM, QUERO AJUDAR MEU FILHO</span>
                 <span class="span-btn2">(Atenção: Últimas vagas disponíveis)</span>
               </a>
-              <br><a href="https://pay.kiwify.com.br/zcz4sgm?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <br><a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="img-fluid" src="./assets/img/secure.webp" style="width:50%">
               <br><br><br><b><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"><u>NESTA OCASIÃO ESPECIAL PARA AS 22 VAGAS RESTANTES:</u><br><br></b><span style="font-family:montserrat;font-size: 24px;color: #f5e051"><b>DESCONTO DE 80% DISPONÍVEL SÓ POR HOJE<brb></span>
               <br><b><br>-------------------------------</b><br><br><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"> NORMALMENTE AVALIADO EM: <span style="color: #FF0000"><s>R$997 REAIS</span></s>
               <br><b><span style="color: #11B613;">POR APENAS:<br></b></span>
-              <span style="color: #11B613;font-size: 30px;"><b>R$197 REAIS</span></b></b>
+              <span style="color: #11B613;font-size: 30px;"><b>R$247 REAIS</span></b></b>
               <br>
               <br>
-              <a href="https://pay.kiwify.com.br/zcz4sgm?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="mx-auto" height="40px" src="./assets/img/Captura.png">
             </div>
 
