--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="esconder" style="font-family: montserrat">
-              <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
+              <a href="https://checkout.mycheckout.com.br/checkout/635083fbfc525b0c0e66c284" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
                 <span class="span-btn">SIM, QUERO AJUDAR MEU FILHO</span>
                 <span class="span-btn2">(Atenção: Últimas vagas disponíveis)</span>
               </a>
-              <br><a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <br><a href="https://checkout.mycheckout.com.br/checkout/635083fbfc525b0c0e66c284"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="img-fluid" src="./assets/img/secure.webp" style="width:50%">
               <br><br><br><b><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"><u>NESTA OCASIÃO ESPECIAL PARA AS 22 VAGAS RESTANTES:</u><br><br></b><span style="font-family:montserrat;font-size: 24px;color: #f5e051"><b>DESCONTO DE 80% DISPONÍVEL SÓ POR HOJE<brb></span>
               <br><b><br>-------------------------------</b><br><br><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"> NORMALMENTE AVALIADO EM: <span style="color: #FF0000"><s>R$997 REAIS</span></s>
@@ -175,7 +175,7 @@
               <span style="color: #11B613;font-size: 30px;"><b>R$247 REAIS</span></b></b>
               <br>
               <br>
-              <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <a href="https://checkout.mycheckout.com.br/checkout/635083fbfc525b0c0e66c284"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="mx-auto" height="40px" src="./assets/img/Captura.png">
             </div>
 
@@ -541,27 +541,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="./assets/js/com.js"></script>
     
-<script>
-    let prefix = ["https://pay.kiwify.com.br"];
-    function getParams() {
-        let t = "",
-            e = window.top.location.href,
-            r = new URL(e);
-        if (null != r) {
-            let a = r.searchParams.get("utm_source"),
-                n = r.searchParams.get("utm_medium"),
-                o = r.searchParams.get("utm_campaign"),
-                m = r.searchParams.get("utm_term"),
-                c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${n}|${o}|${m}|${c}`), console.log(t)
-        }
-        return t
-    }! function() {
-        var t = new URLSearchParams(window.location.search);
-        t.toString() && document.querySelectorAll("a").forEach(function(e) {
-            for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
-        })
-    }(); 
-    </script>  
+    <script>
+    (function() {
+         const utmParamQueryString = new URLSearchParams(window.location.search);
+         if (utmParamQueryString.toString()) {
+              var navLinks = document.querySelectorAll('a');
+              navLinks.forEach(function(item) {
+                   if (item.href.indexOf('checkout.mycheckout.com.br') !== -1) {
+                        if (item.href.indexOf('?') === -1) {
+                             item.href += '?' + utmParamQueryString.toString();
+                        } else {
+                             item.href += '&' + utmParamQueryString.toString();
+                        }
+                   }
+              });
+         }
+    })();
+    </script>
 
   </body>
 </html>
