--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       gtag('config', 'UA-236872965-1');
     </script>
 
-    <link rel="preload" href="https://scripts.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/player.js" as="script">
+    <link rel="preload" href="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/6369618506deba000b06303a/player.js" as="script">
     <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/636715dff28d2a000abd421d/playlist.m3u8" as="fetch">
+    <link rel="preload" href="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/6369618506deba000b06303a/thumbnail.jpg" as="image">
+    <link rel="preload" href="https://cdn.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/6369616e53b6db000b4f5206/playlist.m3u8" as="fetch">
     <link rel="dns-prefetch" href="https://cdn.converteai.net">
     <link rel="dns-prefetch" href="https://scripts.converteai.net">
     <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -101,7 +101,7 @@
             <br>
 
             <!-- VSL -->
-            <div id="vid_636715f7f28d2a000abd421e" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_636715f7f28d2a000abd421e" src="https://images.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_636715f7f28d2a000abd421e" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_636715f7f28d2a000abd421e">var s=document.createElement("script");s.src="https://scripts.converteai.net/e1c14ec4-a896-48ad-a366-4292f16f551e/players/636715f7f28d2a000abd421e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_6369618506deba000b06303a" style="position:relative;width:100%;padding: 66.66666666666666% 0 0;"><img id="thumb_6369618506deba000b06303a" src="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/6369618506deba000b06303a/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6369618506deba000b06303a" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6369618506deba000b06303a">var s=document.createElement("script");s.src="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/6369618506deba000b06303a/player.js",s.async=!0,document.head.appendChild(s);</script>
             
             <style>.esconder { display: none }</style>
 
