--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="esconder" style="font-family: montserrat">
-              <a href="https://pay.kiwify.com.br/Ru2olUo" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true" class="a-btn zoom-in-out max-w-lg-40 mx-auto" style="text-decoration: none;">
                 <span class="span-btn">SIM, QUERO AJUDAR MEU FILHO</span>
                 <span class="span-btn2">(Atenção: Últimas vagas disponíveis)</span>
               </a>
-              <br><a href="https://pay.kiwify.com.br/Ru2olUo"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <br><a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="img-fluid" src="./assets/img/secure.webp" style="width:50%">
               <br><br><br><b><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"><u>NESTA OCASIÃO ESPECIAL PARA AS 22 VAGAS RESTANTES:</u><br><br></b><span style="font-family:montserrat;font-size: 24px;color: #f5e051"><b>DESCONTO DE 80% DISPONÍVEL SÓ POR HOJE<brb></span>
               <br><b><br>-------------------------------</b><br><br><span style="color: #FFFFFF;font-family:montserrat;font-size: 26px;"> NORMALMENTE AVALIADO EM: <span style="color: #FF0000"><s>R$997 REAIS</span></s>
@@ -175,7 +175,7 @@
               <span style="color: #11B613;font-size: 30px;"><b>R$247 REAIS</span></b></b>
               <br>
               <br>
-              <a href="https://pay.kiwify.com.br/Ru2olUo"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
+              <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
               <img class="mx-auto" height="40px" src="./assets/img/Captura.png">
             </div>
 
