--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <body>
     
     <div class="banner py-lg-2 py-sm-1 center">
-    <center><span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães foram selecionadas para assistir a este vídeo hoje</span></b></center>
+    <center><span style="font-size:16px;color: #FFFFFF"><b>Este vídeo sairá do ar a qualquer momento</span></b></center>
     </div>
 
     <header class="py-4">
