--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <body>
     
     <div class="banner py-lg-2 py-sm-1 center">
-    <center><span style="font-size:16px;color: #FFFFFF"><b>Este vídeo sairá do ar a qualquer momento</span></b></center>
+    <center><span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães de</span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span></b></center>
     </div>
 
     <header class="py-4">
@@ -95,7 +95,7 @@
           <div class="col-lg-8 text-center">
 
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/novahead.webp" style="margin-top:-5px">
+            <img class="img-fluid" src="./assets/img/headlinepfbfundoclaro.webp" style="margin-top:-5px">
             <br>
             <br>
 
