--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <body>
     
     <div class="banner py-lg-2 py-sm-1 center">
-    <center><span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães de</span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span></b></center>
+    <center><span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães </span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span></b></center>
     </div>
 
     <header class="py-4">
