--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       header {
         color: white;
         /*background-image: url("assets/img/bg.jpeg");*/
-        background-color: #F8DDE0;
+        background-color: #000000;
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
@@ -88,12 +88,12 @@
           <div class="col-lg-8 text-center">
 
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/headlinepfbfundoclaro.webp" style="margin-top:-5px">
+            <img class="img-fluid" src="./assets/img/headlinepfbfundoescuro.webp" style="margin-top:-5px">
             <br>
             <br>
 
             <!-- VSL -->
-            <div id="vid_63954163f1231e000a40317a" style="position:relative;width:100%;padding: 66.38888888888889% 0 0;"><img id="thumb_63954163f1231e000a40317a" src="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/63954163f1231e000a40317a/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63954163f1231e000a40317a" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63954163f1231e000a40317a">var s=document.createElement("script");s.src="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/63954163f1231e000a40317a/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_637841de53b6db000b4f62e7" style="position:relative;width:100%;padding: 66.66666666666666% 0 0;"><img id="thumb_637841de53b6db000b4f62e7" src="https://images.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/637841de53b6db000b4f62e7/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_637841de53b6db000b4f62e7" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_637841de53b6db000b4f62e7">var s=document.createElement("script");s.src="https://scripts.converteai.net/60ab1fa6-578e-480b-87e8-9a54de116ac5/players/637841de53b6db000b4f62e7/player.js",s.async=!0,document.head.appendChild(s);</script>
             
             <style>.esconder { display: none }</style>
 
