--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             });
             </script>
 
-            <div class="quadro" style="margin-top: 10px;color: #0000CD;">
+            <div class="quadro" style="margin-top: 10px;color: #FFD700;">
               <b>👁 <span id="number"></span> PESSOAS ESTÃO ASSISTINDO A ESSE VÍDEO AGORA...</b>
 
                 <script>
