--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="col-lg-8 text-center">
 
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/head-pfb-fdp1.webp" style="margin-top:-5px">
+            <img class="img-fluid" src="./assets/img/vermelho.webp" style="margin-top:-5px">
             <br>
             <br>
 
