--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <body>
     
     <div class="banner py-lg-2 py-sm-1 center">
-    <center><span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães de</span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span></b></center>
+    <center><span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães </span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span></b></center>
     </div>
 
     <header class="py-4">
@@ -178,9 +178,9 @@
               <br>
               <br>
               <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
-              <img class="mx-auto" height="40px" src="./assets/img/Captura.png">
+              <img class="mx-auto" height="40px" src="./assets/img/Captura.png"> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
             </div>
-
+		
             </div>
           </div>
         </div>
