--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <br>
               <br>
               <a href="https://pay.kiwify.com.br/Ru2olUo?hideBoleto=true"><span style="font-family:montserrat;font-size: 20px;">🛒 <u><b>Adicionar ao Carrinho</a></u></b><br>
-              <img class="mx-auto" height="40px" src="./assets/img/Captura.png"> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+              <img class="mx-auto" height="40px" src="./assets/img/Captura.png"> 
             </div>
 		
             </div>
@@ -188,6 +188,19 @@
     </header>
 
 
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
     <footer class="bg-dark py-3 text-center">
       <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
     </footer>
