--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     fbq('init', '1262452604545141');  
     fbq('init', '548786423465467');
     fbq('init', '840070317071639');
+    fbq('init', '');
     fbq('track', 'PageView');
     fbq('track', 'ViewContent');
     </script>
