--- a/paa/index.html
+++ b/paa/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Academia Filho Gênio</title>
+    <title>Plataforma Aprendizagem Alpha</title>
     
     <style type="text/css">
       header {
@@ -73,7 +73,7 @@
   <body>
     
     <div class="banner py-lg-2 py-sm-1 center">
-    <center><img class="img-fluid" src="./assets/img/paisefilhos.webp" style="width:10%"><!--<span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães de</span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span>--></b></center>
+    <center><img class="img-fluid" src="./assets/img/paisefilhos.webp" style="width:20%"><!--<span style="font-size:16px;color: #FFFFFF"><b>Você e algumas mães de</span> <b><span style="font-size:16px" id="address"></span></b> <span style="font-size:16px;color: #FFFFFF">foram selecionadas para assistir a este vídeo.</span>--></b></center>
     </div>
 
     <header class="py-4">
